[tool.poetry]
name = "weather_monitor"
version = "0.1.0"
description = "Weather Monitor Task"
authors = ["connor <cradams@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
mysql-connector-python = "^8.0.29"
flasgger = "^0.9.5"
Flask-Cors = "^3.0.10"
redis = "^4.3.3"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
